Overclock settings for GTX1080

--- a/xorg.conf
+++ b/xorg.conf
@@ -13,7 +13,7 @@ Section "Screen"
     Option         "UseDisplayDevice" "DFP-0"
     Option         "ConnectedMonitor" "DFP-0"
     Option         "CustomEDID" "DFP-0:@SET_GPU_DIR@/dfp-edid.bin"
-    Option         "Coolbits" "5"
+    Option         "Coolbits" "28"
     SubSection "Display"
                 Depth   24
                 Modes   "1024x768"
@@ -33,7 +33,8 @@ Section "Device"
         Option      "UseDisplayDevice" "DFP-0"
         Option      "ConnectedMonitor" "DFP-0"
         Option      "CustomEDID" "DFP-0:@SET_GPU_DIR@/dfp-edid.bin"
-        Option      "Coolbits" "29"
+        Option      "Coolbits" "28"
+	Option  "RegistryDwords" "PowerMizerEnable=0x1; PerfLevelSrc=0x2222; PowerMizerDefaultAC=0x1"
         BusID       "@GPU_BUS_ID@"
 EndSection
 
